// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Step /> should ask detail about categories 1`] = `
.c3 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c0 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c6 {
  width: 10em;
  text-align: right;
  border-color: #bbcadf;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c1 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c8 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 2rem;
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

<div>
  <header
    class="c0 c1"
  >
    <h2
      class="c2"
    >
      <div
        class="c3"
      />
      Quelle est la catégorie du salarié ?
    </h2>
  </header>
  <p>
    Cette information se trouve sur le bulletin de salaire.
  </p>
  <label
    class="c4"
    for="input-categorie"
  >
    Sélectionnez une catégorie
  </label>
  <select
    id="input-categorie"
    name="categorie"
  >
    <option
      disabled=""
      value=""
    />
    <option
      value="ouvrier"
    >
      Ouvriers et employés
    </option>
    <option
      value="tam"
    >
      Techniciens et agents de maîtrise (TAM)
    </option>
    <option
      value="cadre"
    >
      Cadre
    </option>
  </select>
  <header
    class="c0 c1"
  >
    <h2
      class="c2"
    >
      <div
        class="c3"
      />
      Quelles sont les périodes éventuelles passées au statut de Technicien, Agent de maîtrise (TAM) ou Employé ?
    </h2>
  </header>
  <label
    class="c5"
  >
    <p>
      Période passée en tant que TAM ou employé
    </p>
    <div>
      <input
        class="c6"
        min="0"
        name="tamDuration"
        type="number"
        value=""
      />
       
      mois
    </div>
  </label>
  <label
    class="c5"
  >
    <p>
      Période passée en tant que cadre
    </p>
    <div>
      <input
        class="c6"
        min="0"
        name="cadreDuration"
        type="number"
        value=""
      />
       
      mois
    </div>
  </label>
  <label
    class="c7"
    for="2"
  >
    Quel est l'âge du salarié à la date du licenciement ?
    <span
      aria-label="champs obligatoire"
      class="c8"
    >
      *
    </span>
  </label>
  <div
    class="c9"
  >
    <input
      class="c6"
      id="2"
      name="age"
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`<Step /> should ask detail about retirement  1`] = `
.c3 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c0 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c8 {
  width: 10em;
  text-align: right;
  border-color: #bbcadf;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c1 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

.c5 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c9 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c6 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 2rem;
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c9 {
    font-size: 1.6rem;
  }
}

<div>
  <header
    class="c0 c1"
  >
    <h2
      class="c2"
    >
      <div
        class="c3"
      />
      Quelle est la catégorie du salarié ?
    </h2>
  </header>
  <p>
    Cette information se trouve sur le bulletin de salaire.
  </p>
  <label
    class="c4"
    for="input-categorie"
  >
    Sélectionnez une catégorie
  </label>
  <select
    id="input-categorie"
    name="categorie"
  >
    <option
      disabled=""
      value=""
    />
    <option
      value="ouvrier"
    >
      Ouvriers et employés
    </option>
    <option
      value="tam"
    >
      Techniciens et agents de maîtrise (TAM)
    </option>
    <option
      value="cadre"
    >
      Cadre
    </option>
  </select>
  <label
    class="c5"
    for="3"
  >
    Quel est l'âge du salarié à la date du licenciement ?
    <span
      aria-label="champs obligatoire"
      class="c6"
    >
      *
    </span>
  </label>
  <div
    class="c7"
  >
    <input
      class="c8"
      id="3"
      name="age"
      type="number"
      value="62"
    />
  </div>
  <p
    class="c9"
  >
    Le salarié pourrait-il bénéficier de la retraite ?
    <span
      aria-label="champs obligatoire"
      class="c6"
    >
      *
    </span>
  </p>
  <div
    class="c10"
  >
    <label
      class="c4"
    >
      <input
        name="hasRetirementAge"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c4"
    >
      <input
        name="hasRetirementAge"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
</div>
`;

exports[`<Step /> should render 1`] = `
.c3 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c0 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c8 {
  width: 10em;
  text-align: right;
  border-color: #bbcadf;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c1 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

.c5 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c6 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 2rem;
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 1.6rem;
  }
}

<div>
  <header
    class="c0 c1"
  >
    <h2
      class="c2"
    >
      <div
        class="c3"
      />
      Quelle est la catégorie du salarié ?
    </h2>
  </header>
  <p>
    Cette information se trouve sur le bulletin de salaire.
  </p>
  <label
    class="c4"
    for="input-categorie"
  >
    Sélectionnez une catégorie
  </label>
  <select
    id="input-categorie"
    name="categorie"
  >
    <option
      disabled=""
      value=""
    />
    <option
      value="ouvrier"
    >
      Ouvriers et employés
    </option>
    <option
      value="tam"
    >
      Techniciens et agents de maîtrise (TAM)
    </option>
    <option
      value="cadre"
    >
      Cadre
    </option>
  </select>
  <label
    class="c5"
    for="1"
  >
    Quel est l'âge du salarié à la date du licenciement ?
    <span
      aria-label="champs obligatoire"
      class="c6"
    >
      *
    </span>
  </label>
  <div
    class="c7"
  >
    <input
      class="c8"
      id="1"
      name="age"
      type="number"
      value=""
    />
  </div>
</div>
`;
